--- a/package.json
+++ b/package.json
@@ -30,5 +30,11 @@
     "eslint": "7.31.0",
     "eslint-config-next": "11.0.1",
     "typescript": "^4.3.5"
+  },
+  
+  "extends": "next",
+  "rules": {
+    "react/no-unescaped-entities": "off",
+    "@next/next/no-page-custom-font": "off"
   }
 }
